--- a/Taschenrechner.html
+++ b/Taschenrechner.html
@@ -2,35 +2,59 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <link rel="stylesheet" href="style.css" />
+  <title>Taschenrechnerinator</title>
 </head>
 <body>
 
+<h1>Der Taschenrechnerinator T-1000</h1>
+
+<table>
+  <thead>
+  <tr>
+    <th colspan="4">Fenster für Ergebnis usw.</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td><button>AC</button> </td>
+    <td><button>lol</button></td>
+    <td><button>lol</button></td>
+    <td><button>÷</button></td>
+  </tr>
+
+  <tr>
+    <td><button>7</button> </td>
+    <td><button>8</button></td>
+    <td><button>9</button></td>
+    <td><button>×</button></td>
+  </tr>
+
+  <tr>
+    <td><button>4</button> </td>
+    <td><button>5</button></td>
+    <td><button>6</button></td>
+    <td><button>+</button></td>
+  </tr>
+
+  <tr>
+    <td><button>1</button> </td>
+    <td><button>2</button></td>
+    <td><button>3</button></td>
+    <td><button>-</button></td>
+  </tr>
+
+  <tr>
+    <td colspan="2"><button>0</button> </td>
+    <td><button>,</button></td>
+    <td><button>=</button></td>
+  </tr>
+  </tbody>
+</table>
 <form id="calculator">
   <output>0</output>
   <fieldset>
     <button>√</button>
-    <button>C</button>
-
-    <button>7</button>
-    <button>8</button>
-    <button>9</button>
-    <button>+</button>
-
-    <button>4</button>
-    <button>5</button>
-    <button>6</button>
-    <button>-</button>
-
-    <button>1</button>
-    <button>2</button>
-    <button>3</button>
-    <button>×</button>
-
-    <button>0</button>
-    <button>.</button>
-    <button>=</button>
-    <button>÷</button>
   </fieldset>
 </form>
 
