HTML, CSS fertig? Teilelweise JS, nur Anzeige und Anzeigeleeren

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <!--<th colspan="4"> <input id="display" type="text" class="display"> </th>-->
                 <!--<th colspan="4">Fenster für Ergebnis usw.</th>-->
                 <!--<th colspan="4" class="output" id="disp"> </th>-->
-                <th colspan="4" ><input type="text" id="disp" class="output"> </input></th>
+                <th colspan="4" ><input type="text" id="disp" class="output"></th>
             </tr>
         </thead>
         <tbody>
